@@ -3,6 +3,13 @@ NEWS - OpenPrinting CUPS Filters v1.0.71 - 2015-07-02
 
 CHANGES IN V1.0.72
 
+	- cups-browsed, implicitclass: Added load balancing
+          functionality. If there are several remote CUPS printers
+          with the same name, they for locally a cluster represented
+          by a print queue with this name. This printer prints through
+          a special backend (implicitclass) which makes cups-browsed
+          find the best destination remote queue (fewest jobs,
+          enabled) for this job.
 	- cups-browsed: Added protection against accidental deletion of
 	  print queues generated by cups-browsed. These queues now get
 	  automatically re-created.
